# pixel-art-scaler

./: .clang-format  CMakeLists.txt  README.md
include/: CliParser.hpp  GridMethods.hpp  ImageScaler.hpp  error_codes.hpp  pch_cimg.h  pch_cimg.hpp  pch_magick++.hpp
src/: CliParser.cpp  GridMethods.cpp  ImageScaler.cpp  main.cpp
